# navi4all

./: .gitignore  README.md
.devcontainer/: docker-compose.extend.yml
.github/workflows/: sync-to-opencode.yml
apps/core_backend/: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
apps/core_backend/core/: config.py  utils.py
apps/core_backend/endpoints/: geocoding.py  routing.py  user_engagement.py
apps/core_backend/schemas/: coordinates.py  geocoding.py  place.py  routing.py  user_engagement.py
apps/core_backend/services/: route_utils.py
apps/core_backend/services/adaptors/: geocoding.py  hybrid.py  open_trip_planner.py  user_engagement.py  valhalla.py
apps/core_backend/services/schemas/: open_trip_planner.py  valhalla.py
apps/core_backend/templates/: plan.graphql
apps/core_backend/tests/: conftest.py  test_geocoding_adaptor.py  test_geocoding_endpoint.py  test_geocoding_reverse.py  test_geocoding_reverse_endpoint.py  test_hybrid_adaptor.py  test_open_trip_planner_adaptor.py  test_route_utils.py  test_routing_endpoint.py  test_user_engagement_adaptor.py  test_user_engagement_endpoint.py  test_utils.py  test_valhalla_adaptor.py
apps/kl_mobile/: .env.example  .gitignore  README.md  THIRD_PARTY_LICENSES.md  pubspec.yaml
apps/kl_mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/kl_mobile/lib/: main.dart
apps/ma_mobile/: .env.example  README.md  privacy_policy.md  pubspec.yaml
apps/ma_mobile/ios/: Podfile
apps/ma_mobile/lib/: main.dart
services/: README.md  docker-compose.yml
(+134 files in other folders)
