[project]
name = "core-backend"
version = "0.1.0"
description = "The Navi4All Core Backend API"
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "graphene>=3.4.3",
    "httpx>=0.28.1",
    "polyline>=2.0.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest-asyncio>=1.3.0",
    "redis>=6.2.0",
    "ruff>=0.12.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
